fixed the text spacing on the author description

--- a/cavalierdaily/style.css
+++ b/cavalierdaily/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Abhaya+Libre:500,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 /*
 Theme Name: cavalierdaily
 Theme URI: http://underscores.me/
@@ -1043,6 +1044,11 @@ p{
 }
 .author-bio{
 	padding-top: 15px;
+}
+
+.authorDesc{
+	font-size: 18px;
+	line-height: 26px;
 }
 /*media queries for sidebar*/
 
